tests/compile_fail/missing_attribute.rs
use dto_mapper::From;

#[derive(From)]
struct X {

}

fn main() {}