tests/compile_fail/missing_attribute.stderr
error: Missing one of the attributes '#[convert(from = "...")]' or '#[convert(into = "...")]'
 --> tests/compile_fail/missing_attribute.rs:3:10
  |
3 | #[derive(From)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `From` (in Nightly builds, run with -Z macro-backtrace for more info)
